--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,14 @@
   	"version": "0.1",
 
 	"default_locale": "en",
-	"description": "A chrome extension that will save your pages so you can view them offline."	
+	"description": "A chrome extension that will save your pages so you can view them offline.",
+
+	"content_scripts": [
+		{
+			"matches": [
+				"<all_urls>"
+			],
+			"js": ["content.js"]
+		}
+	]
 }
